# beauty-salon-manager

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci-dev.yml  ci-prod.yml
app/: __init__.py  main.py
app/controllers/: __init__.py  auth_controller.py  calendar_controller.py  customer_controller.py  employee_controller.py  report_controller.py  schedule_controller.py  service_controller.py  visit_controller.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: customer.py  schedule.py  service.py  user.py  visit.py
app/repositories/: __init__.py  base_repository.py  customer_repository.py  schedule_repository.py  service_repository.py  user_repository.py  visit_repository.py
app/schemas/: __init__.py  calendar.py  customer.py  schedule.py  service.py  user.py  visit.py
app/services/: auth_service.py  availability_service.py  calendar_service.py  customer_service.py  employee_service.py  report_service.py  schedule_service.py  service_service.py  visit_service.py
resources/: MVP_AGENT_GUIDE.md  TESTS_PLAN.md
tests/: conftest.py
tests/unit/: test_availability.py
